add page formatting, media, and text color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>HAL 9000 💻🔴</h1>
+    <img class="center fit" id="bgHAL" src="img/HAL.jpg" alt="background picture of HAL 9000">
     <div class="form-group">
       <form class="form-group" id="numberForm">
         <input class="form-control" type="text" id="inputNumber" placeholder="Type any number here!">
