--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <h1>HAL 9000 💻🔴</h1>
     <img class="center fit" id="bgHAL" src="img/HAL.jpg" alt="background picture of HAL 9000">
-    <div class="form-group">
+    <div class="form-group row">
       <form class="form-group" id="numberForm">
-        <input class="form-control" type="text" id="inputNumber" placeholder="Type any number here!">
+        <input class="form-control input-sm" type="text" id="inputNumber" placeholder="Type any number here!">
         <button type="submit" class="btn btn-primary">Give HAL 9000 your number</button>
       </form>
     </div>
