--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="form-group row">
       <form class="form-group" id="numberForm">
         <input class="form-control input-sm" type="text" id="inputNumber" placeholder="Type any number here!">
-        <button type="submit" class="btn btn-primary">Give HAL 9000 your number</button>
+        <input class="form-control input-sm" type="text" id="userName" placeholder="Type your name here!">
+        <button type="submit" class="btn btn-primary">Give HAL 9000 your number and get a big list</button>
       </form>
     </div>
     <div class="container">
