cleaned up javascript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <h1>HAL 9000 💻🔴</h1>
+    <h2>Give them a number....</h2>
+    <h5>....They'll give you a list</h5>
     <img class="center fit" id="bgHAL" src="img/HAL.jpg" alt="background picture of HAL 9000">
     <div class="form-group row">
       <form class="form-group" id="numberForm">
