update input field for number

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="form-group row">
       <form class="form-group" id="numberForm">
         <input class="form-control input-sm" type="text" id="userName" placeholder="Type your name here!">
-        <input class="form-control input-sm" type="text" id="inputNumber" placeholder="Type any number here!">
+        <input class="form-control input-sm" type="text" id="inputNumber" placeholder="Type any number (negative or positive) here!">
         <button type="submit" class="btn btn-primary">Give HAL 9000 your number and get a big list</button>
       </form>
     </div>
